--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -31,7 +31,11 @@
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <link href="{% static 'css/menu.css' %}" rel="stylesheet">
     <link href="{% static 'css/own.css' %}" rel="stylesheet">
-    <script src="{% static 'js/jquery.min.js' %}"></script>
+
+      {% if '/core/importar/' != request.path %}
+          <script src="{% static 'js/jquery.min.js' %}"></script>
+      {% endif %}
+
     <!-- <script src="{% static 'highcharts.js' %}"></script> -->
     <script src="{% static 'js/jquery.imagemapster.js' %}"></script>
 
