creando grafico de barra horizontal

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -917,5 +917,5 @@
 {% endblock %}
 
 {% block custom_scripts %}
-    {{ charts|load_charts:"pie,bar" }}
+    {{ charts|load_charts:"pie,bar,bar_horizontal" }}
 {% endblock %}
