--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -2,10 +2,10 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="container">
-            <div class="col-lg-6 col-md-6 col-sm-6" id="greater-middle-lower">
+            <div class="col-lg-6 col-md-6 col-sm-12" id="greater-middle-lower">
                 <div class="row">
                     {% if periodo_list|keyvalue:year == 'I' %}
-                         {% for row in otros|dictsortreversed:'asignado_percent' %}
+                        {% for row in otros|dictsortreversed:'asignado_percent' %}
                             {% if forloop.first and municipio.slug == row.gasto__municipio__slug %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
@@ -116,8 +116,9 @@
 
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <p>Chart</p>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                </div>
             </div>
         </div>
     </div>
