regresando horizontal-timeline.js, eliminando clase css 'cd-horizontal-timeline' de secciones del html ogm_chart donde no se utilizan

--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -350,5 +350,6 @@
     </script>
     <script src="{% static 'js/highcharts.js' %}"></script>
     <script src="{% static 'js/pma.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/horizontal-timeline.js' %}"></script>
 
 {% endblock %}
