--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -154,7 +154,7 @@
 {% endblock %}
 
 {% block section3 %}
-    <div class="cd-horizontal-timeline inverted loaded pma-gradient">
+    <div class="inverted loaded pma-gradient">
         {% if not municipio %}
             <div class="container">
                 <div class="row">
