--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -14,7 +14,7 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
                                             <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -26,7 +26,7 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
                                             <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -38,7 +38,7 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
                                             <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -52,7 +52,7 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
                                             <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
                                         </div>
                                     </div>
                                 </div>
