--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -13,7 +13,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% if row.ingreso__municipio__nombre %}
+                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
+                                            {% else %}
+                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% endif %}
                                             <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
                                         </div>
                                     </div>
@@ -25,7 +29,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% if row.ingreso__municipio__nombre %}
+                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
+                                            {% else %}
+                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% endif %}
                                             <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
                                         </div>
                                     </div>
@@ -37,7 +45,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% if row.ingreso__municipio__nombre %}
+                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
+                                            {% else %}
+                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% endif %}
                                             <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
                                         </div>
                                     </div>
@@ -51,7 +63,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                           {% if row.ingreso__municipio__nombre %}
+                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
+                                            {% else %}
+                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% endif %}
                                             <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
                                         </div>
                                     </div>
@@ -67,7 +83,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% if row.ingreso__municipio__nombre %}
+                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
+                                            {% else %}
+                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% endif %}
                                             <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
                                         </div>
                                     </div>
@@ -79,7 +99,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% if row.ingreso__municipio__nombre %}
+                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
+                                            {% else %}
+                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% endif %}
                                             <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
                                         </div>
                                     </div>
@@ -91,7 +115,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% if row.ingreso__municipio__nombre %}
+                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
+                                            {% else %}
+                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% endif %}
                                             <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
                                         </div>
                                     </div>
@@ -105,7 +133,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% if row.ingreso__municipio__nombre %}
+                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
+                                            {% else %}
+                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
+                                            {% endif %}
                                             <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
                                         </div>
                                     </div>
