aplicando lowercase al nombre del municipio y los municipios para mejorar la validacion de municipio seleccionado

--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     {% if periodo_list|keyvalue:year == 'I' %}
                         {% for row in otros|dictsortreversed:'asignado_percent' %}
-                            {% if forloop.first and municipio.slug == row.gasto__municipio__slug %}
+                            {% if forloop.first and municipio.slug|lower == row.gasto__municipio__slug|lower or forloop.first and municipio.slug|lower == row.ingreso__municipio__nombre|lower %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
@@ -38,7 +38,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            {% elif  municipio.slug == row.gasto__municipio__slug %}
+                            {% elif  municipio.slug|lower == row.gasto__municipio__slug|lower or municipio.slug|lower == row.ingreso__municipio__nombre|lower %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
@@ -76,7 +76,7 @@
                         {% endfor %}
                     {% else %}
                         {% for row in otros|dictsortreversed:'ejecutado_percent' %}
-                            {% if forloop.first and municipio.slug == row.gasto__municipio__slug %}
+                            {% if forloop.first and municipio.slug|lower == row.gasto__municipio__slug|lower or forloop.first and municipio.slug|lower == row.ingreso__municipio__nombre|lower %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
@@ -108,7 +108,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            {% elif  municipio.slug == row.gasto__municipio__slug %}
+                            {% elif  municipio.slug|lower == row.gasto__municipio__slug|lower or municipio.slug|lower == row.ingreso__municipio__nombre|lower %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
