--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -1,4 +1,4 @@
-{% load core_extras %}
+{% load core_extras humanize %}
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="container">
@@ -18,7 +18,7 @@
                                             {% else %}
                                                 <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
                                             {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.asignado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -34,7 +34,7 @@
                                             {% else %}
                                                 <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
                                             {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.asignado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -50,7 +50,7 @@
                                             {% else %}
                                                 <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
                                             {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.asignado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -63,12 +63,12 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                           {% if row.ingreso__municipio__nombre %}
+                                            {% if row.ingreso__municipio__nombre %}
                                                 <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
                                             {% else %}
                                                 <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
                                             {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.asignado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.asignado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                                             {% else %}
                                                 <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
                                             {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -104,7 +104,7 @@
                                             {% else %}
                                                 <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
                                             {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -120,7 +120,7 @@
                                             {% else %}
                                                 <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
                                             {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -138,7 +138,7 @@
                                             {% else %}
                                                 <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
                                             {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent }}</p>
+                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
